--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zhangjiajie-Parallax</title>
+    <link rel="stylesheet" href="/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <img src="img/logo.png" alt="Travelo" class="logo" />
+        <ul>
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Sign Up</a></li>
+          <li class="search">
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+          </li>
+          <li class="hamburger">
+            <a href="#">
+              <div class="bar"></div>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main> 
+      <img src="img/background.png" alt="" class="parallax bg-img">
+      <img src="img/fog_7.png" alt="" class="parallax fog-7">
+    </main>
+  </body>
 </html>
