--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
       <img src="img/mountain_1.png" alt="" class="parallax mountain-1" />
       <img src="img/fog_1.png" alt="" class="parallax fog-1" />
     </main>
+
+    <script src="/js/app.js"></script>
   </body>
 </html>
