--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         data-speedy="0.38"
         data-speedz="0"
         data-rotation="0"
+        data-distance="-200"
         class="parallax bg-img"
       />
       <img
@@ -45,6 +46,7 @@
         data-speedy="0.32"
         data-speedz="0"
         data-rotation="0"
+        data-distance="850"
         class="parallax fog-7"
       />
       <img
@@ -53,6 +55,7 @@
         data-speedy="0.305"
         data-speedz="0"
         data-rotation="0"
+        data-distance="1100"
         class="parallax mountain-10"
       />
       <img
@@ -61,6 +64,7 @@
         data-speedy="0.28"
         data-speedz="0."
         data-rotation="0"
+        data-distance="1400"
         class="parallax fog-6"
       />
       <img
@@ -68,7 +72,8 @@
         data-speedx="0.125"
         data-speedy="0.155"
         data-speedz="0.15"
-        data-rotation="0.15"
+        data-rotation="0.02"
+        data-distance="1700"
         class="parallax mountain-9"
       />
       <img
@@ -77,6 +82,7 @@
         data-speedy="0.11"
         data-speedz="0"
         data-rotation="0.02"
+        data-distance="1800"
         class="parallax mountain-8"
       />
       <img
@@ -84,6 +90,8 @@
         data-speedx="0.16"
         data-speedy="0.105"
         data-speedz="0"
+        data-rotation="0"
+        data-distance="1900"
         class="parallax fog-5"
       />
       <img
@@ -92,6 +100,7 @@
         data-speedy="0.1"
         data-speedz="0"
         data-rotation="0.09"
+        data-distance="2000"
         class="parallax mountain-7"
       />
       <div
@@ -100,6 +109,7 @@
         data-speedy="0.07"
         data-speedz="0"
         data-rotation="0.11"
+        data-distance="0"
       >
         <h2>China</h2>
         <h1>Zhangjiajie</h1>
@@ -110,21 +120,25 @@
         data-speedy="0.05"
         data-speedz="0.05"
         data-rotation="0.12"
+        data-distance="2300"
         class="parallax mountain-6"
       />
       <img
         src="img/fog_4.png"
         data-speedx="0.135"
-        data-speedy="0.103"
+        data-speedy="0.04"
         data-speedz="0"
+        data-rotation="0"
+        data-distance="2400"
         class="parallax fog-4"
       />
       <img
         src="img/mountain_5.png"
         data-speedx="0.08"
-        data-speedy="0.014"
+        data-speedy="0.03"
         data-speedz="0.13"
         data-rotation="0.1"
+        data-distance="2550"
         class="parallax mountain-5"
       />
       <img
@@ -133,28 +147,34 @@
         data-speedy="0.018"
         data-speedz="0"
         data-rotation="0"
+        data-distance="2800"
         class="parallax fog-3"
       />
       <img
         src="img/mountain_4.png"
         data-speedx="0.059"
-        data-speedy="0.32"
-        data-speedz="0"
+        data-speedy="0.24"
+        data-speedz="0.35"
         data-rotation="0.14"
+        data-distance="3200"
         class="parallax mountain-4"
       />
       <img
         src="img/mountain_3.png"
         data-speedx="0.04"
         data-speedy="0.18"
-        data-speedz="0.05"
+        data-speedz="0.32"
+        data-rotation="0.05"
+        data-distance="3400"
         class="parallax mountain-3"
       />
       <img
         src="img/fog_2.png"
         data-speedx="0.15"
         data-speedy="0.0115"
+        data-distance="3600"
         data-speedz="0"
+        data-rotation="0"
         class="parallax fog-2"
       />
       <img
@@ -163,6 +183,7 @@
         data-speedy="0.013"
         data-speedz="0.42"
         data-rotation="0.15"
+        data-distance="3800"
         class="parallax mountain-2"
       />
       <img
@@ -171,6 +192,7 @@
         data-speedy="0.018"
         data-speedz="0.53"
         data-rotation="0.2"
+        data-distance="4000"
         class="parallax mountain-1"
       />
 
@@ -181,9 +203,14 @@
         src="img/fog_1.png"
         data-speedx="0.12"
         data-speedy="0.01"
+        data-speedz="0"
+        data-rotation="0"
         class="parallax fog-1"
+        data-distance="4200"
       />
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="js/gsap.min.js"></script>
 
     <script src="/js/app.js"></script>
   </body>
