--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zhangjiajie-Parallax</title>
+    <title>Travelo-Parallax</title>
     <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="hide">
       <nav>
         <img src="img/logo.png" alt="Travelo" class="logo" />
         <ul>
@@ -20,11 +20,6 @@
           <li><a href="#">Sign Up</a></li>
           <li class="search">
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-          </li>
-          <li class="hamburger">
-            <a href="#">
-              <div class="bar"></div>
-            </a>
           </li>
         </ul>
       </nav>
